# kanidm

./: .clippy.toml  .codespell_dictionary  .codespell_ignore  .dockerignore  .editorconfig  .gitignore  .gitmodules  .rustfmt.toml  .yamllint  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  Cross.toml  DEVELOPER_README.md  Dockerfile  FAQ.md  GETTING_STARTED.md  LICENSE.md  Makefile  PROPOSAL.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  build_all_the_docs.sh  build_rs_cov.profraw  check_dependabot.sh  clippy.toml  deno.json  insecure_generate_tls.ps1  insecure_generate_tls.sh  install.yml  package-lock.json  package.json  project_plan.md  pull_request_template.md  rfc-8705.md  shell.nix
iam_migrations/freeipa/: 00config-mod.ldif  01test-sync.sh  Cargo.toml
kanidm_client/: Cargo.toml
kanidm_client/src/: asynchronous.rs  lib.rs  person.rs  scim.rs  service_account.rs  sync_account.rs  system.rs
kanidm_client/tests/: common.rs  default_entries.rs  oauth2_test.rs  proto_v1_test.rs
kanidm_proto/: Cargo.toml
kanidm_proto/src/: internal.rs  lib.rs  messages.rs  oauth2.rs  scim_v1.rs  utils.rs  v1.rs
kanidm_rlm_python/: Dockerfile  README.md  config.ini  default  eap  entrypoint.py  inner-tunnel  kanidm_radius.py  kanidmradius.py  mod-python  mod-python3  pyproject.toml  radius_entrypoint.py  run_radius_container.sh
kanidm_rlm_python/kanidmradius/: __init__.py  __main__ffooo.py  radiusd.py  utils.py
kanidm_rlm_python/mods-available/: eap  python3
kanidm_rlm_python/sites-available/: check-eap-tls  default  inner-tunnel
kanidm_rlm_python/test_data/: config.ini  kanidm_radius.toml
kanidm_rlm_python/tests/: test_check_vlan.py  test_config.py
kanidm_tools/: Cargo.toml  Dockerfile  build.rs  example.modify.idm_admin.json  example.modify.json
kanidm_tools/src/: badlist_preprocess.rs  main.rs  ssh_authorizedkeys.rs
kanidm_tui/: Cargo.toml
kanidm_tui/src/: app.rs  lib.rs
kanidm_unix_int/: Cargo.toml  build.rs
kanidm_unix_int/nss_kanidm/: Cargo.toml
kanidm_unix_int/pam_kanidm/: Cargo.toml
kanidm_unix_int/pam_tester/: Cargo.toml
kanidm_unix_int/src/: cache.rs  cache_clear.rs  cache_invalidate.rs  client.rs  client_sync.rs  constants.rs  daemon.rs  daemon_status.rs  db.rs  lib.rs  ssh_authorizedkeys.rs  tasks_daemon.rs  test_auth.rs  unix_config.rs  unix_proto.rs
kanidm_unix_int/tests/: cache_layer_test.rs
kanidm_win_int/common/: Cargo.toml
kanidmd/: Cargo.toml  Dockerfile  Dockerfile.scratch  build.rs  builder.sh  server.toml
kanidmd/benches/: kanidm_benchmark.rs  scaling_10k.rs
kanidmd/core/: Cargo.toml
kanidmd/daemon/: Cargo.toml  build.rs  run_insecure_dev_server.sh
kanidmd/idm/: Cargo.toml
kanidmd/lib/: Cargo.toml  build.rs
kanidmd/score/: Cargo.toml  build.rs
kanidmd/testkit/: Cargo.toml
kanidmd/testkit-macros/: Cargo.toml
kanidmd_web_ui/: Cargo.toml  build_wasm.sh  build_wasm_dev.sh  build_wasm_release.sh
kanidmd_web_ui/pkg/: README.md  bundle.js  kanidmd_web_ui.d.ts  kanidmd_web_ui.js  kanidmd_web_ui_bg.wasm  kanidmd_web_ui_bg.wasm.d.ts  package.json  style.css  wasmloader.js
kanidmd_web_ui/src/: constants.rs  error.rs  lib.rs  login.rs  macros.rs  main.js  manager.rs  oauth2.rs  style.css  utils.rs  wasmloader.js
orca/: Cargo.toml
orca/src/: data.rs  ds.rs  generate.rs  ipa.rs  kani.rs  ldap.rs  main.rs  opt.rs  preprocess.rs  profile.rs  setup.rs
profiles/: Cargo.toml  build.rs  container_generic.toml  container_x86_64_v3.toml  developer.toml  release_suse_generic.toml  release_suse_x86_64.toml  syntax.rs
profiles/src/: lib.rs
proto/: Cargo.toml  build.rs
proto/src/: attribute.rs  backup.rs  cli.rs  config.rs  constants.rs  internal.rs  lib.rs  messages.rs  oauth2.rs  scim_v1.rs  utils.rs  v1.rs
pykanidm/: README.md  TODO.md  mkdocs.yml  pyproject.toml  radius_test_env.sh  run_coverage.sh
pykanidm/docs/: kanidmclient.md  kanidmclientconfig.md  radiusclient.md  tokenstore.md
pykanidm/kanidm/: __init__.py  exceptions.py  openapi.py  openapi_codegen.py  tokens.py  types.py  utils.py
pykanidm/kanidm_openapi_client/: _GENERATED_NOTICE.txt  __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
pykanidm/scripts/: openapi_codegen.py
pykanidm/tests/: badssl_trusted_ca.pem  conftest.py  test_authenticate.py  test_config_loader.py  test_jwt.py  test_mocked.py  test_oauth2.py  test_oauth2_checks.py  test_openapi_client_gets.py  test_openapi_codegen.py  test_openapi_spec.py  test_openapi_wrappers.py  test_radius_check_vlan.py  test_radius_config.py  test_radius_token.py  test_session_header.py  test_ssl_ca.py  test_types.py  testutils.py
rlm_python/: Dockerfile  Dockerfile.rust  README.md  pyproject.toml  radius_entrypoint.py  run_radius_container.sh  run_test.sh
rlm_python/mods-available/: eap  kanidm_rust
rlm_python/sites-available/: check-eap-tls  inner-tunnel
rlm_python/test_data/: config.ini
rsidm_client/: Cargo.toml
rsidm_client/src/: lib.rs
rsidm_client/tests/: proto_v1_test.rs
rsidm_proto/: Cargo.toml
rsidm_proto/src/: lib.rs  v1.rs
rsidm_tools/: Cargo.toml
rsidm_tools/src/: main.rs
rsidmd/: Cargo.toml
sketching/: Cargo.toml
sketching/src/: lib.rs  macros.rs  middleware.rs
totp/: Cargo.toml
totp/src/: lib.rs
unix_integration/: Cargo.toml  Makefile  build.rs
unix_integration/common/: Cargo.toml  build.rs
unix_integration/nss/: Cargo.toml  build.rs
unix_integration/nss_kanidm/: Cargo.toml  build.rs
unix_integration/nss_sparkle/: Cargo.toml  build.rs
unix_integration/nss_sparkle_common/: Cargo.toml
unix_integration/pam/: Cargo.toml
unix_integration/pam_kanidm/: Cargo.toml  build.rs
unix_integration/pam_sparkle/: Cargo.toml  build.rs
unix_integration/pam_sparkle_common/: Cargo.toml
unix_integration/resolver/: Cargo.toml  build.rs
unix_integration/resolver_common/: Cargo.toml  build.rs
unix_integration/resolver_kanidm/: Cargo.toml  build.rs
unix_integration/resolver_sparkle/: Cargo.toml
unix_integration/src/: cache.rs  (+19 more)
windows_integration/: Cargo.toml  README.md  install.ps1  uninstall.ps1
(+31058 files in other folders)
