[workspace.package]
version = "1.10.0-dev"
authors = [
    "William Brown <william@blackhats.net.au>",
    "James Hodgkinson <james@terminaloutcomes.com>",
]
rust-version = "1.93"
edition = "2021"
license = "MPL-2.0"
homepage = "https://github.com/kanidm/kanidm/"
repository = "https://github.com/kanidm/kanidm/"

[workspace]
resolver = "2"
members = [
    "proto",
    "tools/cli",
    "tools/device_flow",
    "tools/iam_migrations/freeipa",
    "tools/iam_migrations/ldap",
    "tools/orca",
    "unix_integration/common",
    "unix_integration/nss_kanidm",
    "unix_integration/pam_kanidm",
    "unix_integration/resolver",
    "server/daemon",
    "server/lib",
    "server/lib-macros",
    "server/core",
    "server/testkit",
    "server/testkit-macros",
    "libs/client",
    "libs/crypto",
    "libs/file_permissions",
    "libs/profiles",
    "libs/scim_proto",
    "libs/sketching",
    "libs/users",
    "tools/mail_sender",
]

# Below follows some guides/estimates to system resources consumed during a build.
# Most of these values are over-estimates and are just rough observations.
#
# These were tested on a 10core M1 Max.
# Parallel Linking Maximum = an estimate of how much ram will be consumed at peak
#   while the build is linking multiple binaries in parallel
# Single Largest Binary Maximum = an estamite of how much ram is conusmed by the
#   single largest binary during linking. This would reflect a single threaded
#   build ram maximum.
# Time = estimate on how long the build may take.

# cargo build --release
#
# Parallel Linking Maximum: 6GB
# Single Largest Binary Maximum: 5GB
# Time: ~6 minutes
[profile.release]
debug = true
strip = "none"
lto = "thin"
opt-level = 3
codegen-units = 32

[profile.release.build-override]
debug = false
opt-level = 0
codegen-units = 256

# cargo build --profile release-lto
#
# Parallel Linking Maximum: 24GB
# Single Largest Binary Maximum: 16GB
# Time: ~11 minutes
[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

# cargo build
#
# Parallel Linking Maximum: 4GB
# Single Largest Binary Maximum: 3GB
# Time: ~2 minutes
#
# cargo test [-- --test-threads=1]
#
# Parallel Maximum: 1GB
# Single Maximum: 0.2GB
[profile.dev]
debug = true
lto = false
opt-level = 0
codegen-units = 256

[profile.dev.build-override]
debug = true
opt-level = 0
codegen-units = 256

[patch.crates-io]
## As Kanidm maintains a number of libraries, sometimes during development we need to override them
## with local or git versions. This patch table allows quick uncommenting to achieve that.

# compact_jwt = { path = "../compact-jwt" }
crypto-glue = { path = "../crypto-glue" }
# concread = { path = "../concread" }
# idlset = { path = "../idlset" }
# kanidm-hsm-crypto = { path = "../hsm-crypto" }

# ldap3_client = { path = "../ldap3/client" }
# ldap3_proto = { path = "../ldap3/proto" }
# ldap3_client = { git = "https://github.com/kanidm/ldap3.git" }
# ldap3_proto = { git = "https://github.com/kanidm/ldap3.git" }

# base64urlsafedata = { path = "../webauthn-rs/base64urlsafedata" }
# webauthn-authenticator-rs = { path = "../webauthn-rs/webauthn-authenticator-rs" }
# webauthn-rs = { path = "../webauthn-rs/webauthn-rs" }
# webauthn-rs-core = { path = "../webauthn-rs/webauthn-rs-core" }
# webauthn-rs-proto = { path = "../webauthn-rs/webauthn-rs-proto" }
# sshkey-attest = { path = "../webauthn-rs/sshkey-attest" }

[workspace.dependencies]
kanidmd_core = { path = "./server/core", version = "=1.10.0-dev" }
kanidmd_lib = { path = "./server/lib", version = "=1.10.0-dev" }
kanidmd_lib_macros = { path = "./server/lib-macros", version = "=1.10.0-dev" }
kanidmd_testkit = { path = "./server/testkit", version = "=1.10.0-dev" }
kanidm_build_profiles = { path = "./libs/profiles", version = "=1.10.0-dev" }
kanidm_client = { path = "./libs/client", version = "=1.10.0-dev" }
kanidm_lib_crypto = { path = "./libs/crypto", version = "=1.10.0-dev" }
kanidm_lib_file_permissions = { path = "./libs/file_permissions", version = "=1.10.0-dev" }
kanidm_proto = { path = "./proto", version = "=1.10.0-dev" }
kanidm_unix_common = { path = "./unix_integration/common", version = "=1.10.0-dev" }
kanidm_utils_users = { path = "./libs/users", version = "=1.10.0-dev" }
scim_proto = { path = "./libs/scim_proto", version = "=1.10.0-dev" }
sketching = { path = "./libs/sketching", version = "=1.10.0-dev" }

kanidm-hsm-crypto = { version = "^0.3.5" }

anyhow = { version = "1.0.102" }
argon2 = { version = "0.5.3", features = ["alloc"] }
askama = { version = "0.15.4" }
askama_web = { version = "0.15.1", features = ["axum-0.8"] }
async-trait = "^0.1.89"
axum = { version = "0.8.8", features = [
    "form",
    "json",
    "macros",
    "multipart",
    "original-uri",
    "query",
    "tokio",
    "tracing",
] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
axum-macros = "0.5.0"
axum-htmx = { version = "0.8.1", features = ["serde", "guards"] }
base32 = "^0.5.1"
base64 = "^0.22.1"
base64urlsafedata = "0.5.4"
bitflags = "^2.11.0"
bytes = "^1.11.1"
cidr = "0.3.2"
clap = { version = "4.5.60", features = ["derive", "env"] }
clap_complete = "^4.5.66"
# Forced by saffron/cron
chrono = "^0.4.44"
compact_jwt = "^0.5.5"
concread = "^0.5.10"
cron = "0.15.0"
crossbeam = "0.8.4"
crypto-glue = "^0.1.13"
csv = "1.4.0"
dialoguer = "0.12.0"
dhat = "0.3.3"
dyn-clone = "^1.0.20"
enum-iterator = "2.3.0"
fantoccini = "0.22.0"
filetime = "^0.2.27"
fs4 = "^0.13.1"
futures = "^0.3.32"
futures-util = { version = "^0.3.32", features = ["sink"] }
gethostname = "1.1.0"
gix = { version = "0.80.0", default-features = false }
haproxy-protocol = { version = "0.0.4" }
hashbrown = { version = "0.16.1", features = ["serde", "inline-more"] }
hex = "^0.4.3"
http = "1.4.0"
http-body-util = "0.1"
hyper = { version = "1.8.1" }
hyper-util = { version = "0.1.20", features = ["server", "tokio"] }
idlset = "^0.2.5"
image = { version = "0.25.9", default-features = false, features = [
    "gif",
    "jpeg",
    "webp",
] }
itertools = "0.14.0"
jsonschema = "0.42.1"
ldap3_client = "^0.6.2"
ldap3_proto = { version = "^0.6.2", features = ["serde"] }
lettre = { version = "0.11.19", default-features = false }
libc = "0.2.182"
libnss = "^0.9.0"
lodepng = "3.12.2"
lru = "0.16.3"
mathru = "0.16.2"
md4 = "0.10.2"
md-5 = "0.10.6"
mimalloc = "0.1.48"
nonempty = "0.12.0"
notify-debouncer-full = { version = "0.7" }
num_enum = "0.7.5"
oauth2_ext = { version = "^5.0.0", package = "oauth2", default-features = false }
openssl-sys = "^0.9"
openssl = "^0.10.75"
opentelemetry = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = [
    "serde",
    "logs",
    "metrics",
    "http-proto",
    "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.31.0"
tracing-opentelemetry = "0.32.1"
tracing-core = "0.1.36"
peg = "0.8"
pkg-config = "^0.3.32"
prctl = "1.0.0"
proc-macro2 = "1.0.106"
qrcode = "0.14.1"
quote = "1"
rand = "0.10.0"
rand_chacha = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = [
    "cookies",
    "gzip",
    "http2",
    "form",
    "json",
    "multipart",
    "rustls",
    "query",
] }
rusqlite = { version = "0.38.0", features = ["array", "bundled"] }
rustls = { version = "0.23.37", default-features = false, features = [
    "std",
    "aws_lc_rs",
] }
sd-notify = "^0.4.5"
selinux = "^0.6.0"
serde = "^1.0.228"
serde_cbor = { version = "0.13.0", package = "serde_cbor_2" }
serde-hjson = "1.1.0"
serde_json = "^1.0.149"
serde_urlencoded = "^0.7.1"
serde_with = "3.17.0"
sha-crypt = "0.5.0"
sha2 = "0.11.0-rc.5"
shellexpand = "3.1.2"
smartstring = "^1.0.1"
smolset = "^1.3.1"
sshkey-attest = "^0.5.4"
sshkeys = "0.3.4"
svg = "0.18.0"
syn = { version = "2.0.117", features = ["full"] }
tempfile = "3.26.0"
testkit-macros = { path = "./server/testkit-macros" }
time = { version = "^0.3.47", features = ["formatting", "local-offset"] }
tokio = { version = "^1.49.0", default-features = false }
tokio-openssl = "^0.6.5"
tokio-rustls = { version = "0.26.4" }
tokio-util = "^0.7.18"
toml = "^1"
tonic = { version = "0.14.5", default-features = false }
tower = { version = "0.5.3" }
tower-http = { version = "0.6.8" }
tracing = { version = "^0.1.44", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "^0.3.22", features = ["env-filter"] }
tracing-forest = { version = "^0.3.1", features = ["defer"] }
url = "^2.5.8"
urlencoding = "2.1.3"
utoipa = { version = "5.4.0", features = ["url", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", default-features = false }
uuid = "^1.21.0"
webauthn-authenticator-rs = { version = "0.5.4", default-features = false }
webauthn-rs = { version = "0.5.4", features = ["preview-features"] }
webauthn-rs-core = "0.5.4"
webauthn-rs-proto = "0.5.4"
whoami = "^2.1.1"
walkdir = "2"
x509-cert = "0.2.5"
yescrypt = "0.1.0-rc.5"
zxcvbn = "3.1.0"
