[package]
name = "kanidm_client"
version = "1.1.0-alpha.8"
authors = ["William Brown <william@blackhats.net.au>"]
rust-version = "1.59"
edition = "2021"
license = "MPL-2.0"
description = "Kanidm Client Library"
documentation = "https://docs.rs/kanidm_client/latest/kanidm_client/"
homepage = "https://github.com/kanidm/kanidm/"
repository = "https://github.com/kanidm/kanidm/"

[dependencies]
tracing = "^0.1.34"
reqwest = { version = "^0.11.10", features=["cookies", "json", "native-tls"] }
kanidm_proto = { path = "../kanidm_proto", version = "1.1.0-alpha.8" }
serde = { version = "^1.0.136", features = ["derive"] }
serde_json = "^1.0.79"
toml = "^0.5.9"
uuid = { version = "^1.0.0", features = ["serde", "v4"] }
url = { version = "^2.2.2", features = ["serde"] }
webauthn-rs = "^0.3.2"
tokio = { version = "^1.18.0", features = ["rt", "net", "time", "macros", "sync", "signal"] }

