[package]
name = "kanidm_proto"
version = "1.1.0-alpha.9"
authors = ["William Brown <william@blackhats.net.au>"]
rust-version = "1.59"
edition = "2021"
license = "MPL-2.0"
description = "Kanidm Protocol Bindings for serde"
documentation = "https://docs.rs/kanidm_proto/latest/kanidm_proto/"
homepage = "https://github.com/kanidm/kanidm/"
repository = "https://github.com/kanidm/kanidm/"

[features]
wasm = ["webauthn-rs-proto/wasm"]

[dependencies]
serde = { version = "^1.0.142", features = ["derive"] }
serde_json = "^1.0.83"
uuid = { version = "^1.1.2", features = ["serde"] }
base32 = "^0.4.0"
base64urlsafedata = "0.1.0"
webauthn-rs-proto = "0.4.2-beta.3"
# Can not upgrade due to breaking timezone apis.
time = { version = "=0.2.27", features = ["serde", "std"] }
url = { version = "^2.2.2", features = ["serde"] }
urlencoding = "2.1.0"
