[tool.poetry]
name = "kanidmradius"
version = "0.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
toml = "^0.10.2"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pylint = "^2.13.9"
mypy = "^0.960"
types-requests = "^2.27.29"
pytest = "^7.1.2"
types-toml = "^0.10.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
disable="W0511"