[package]
name = "kanidm_tools"
version = "1.1.0-alpha.9"
authors = ["William Brown <william@blackhats.net.au>"]
rust-version = "1.59"
edition = "2021"
default-run = "kanidm"
license = "MPL-2.0"
description = "Kanidm Client Tools"
documentation = "https://docs.rs/kanidm_tools/latest/kanidm_tools/"
homepage = "https://github.com/kanidm/kanidm/"
repository = "https://github.com/kanidm/kanidm/"

[lib]
name = "kanidm_cli"
path = "src/cli/lib.rs"

[[bin]]
name = "kanidm"
path = "src/cli/main.rs"
doc = false

[[bin]]
name = "kanidm_ssh_authorizedkeys_direct"
path = "src/ssh_authorizedkeys.rs"

[[bin]]
name = "kanidm_badlist_preprocess"
path = "src/badlist_preprocess.rs"

[dependencies]
kanidm_client = { path = "../kanidm_client", version = "1.1.0-alpha.8" }
kanidm_proto = { path = "../kanidm_proto", version = "1.1.0-alpha.8" }
tracing = "^0.1.35"
tracing-subscriber = { version = "^0.3.14", features = ["env-filter", "fmt"] }
rpassword = "^7.0.0"
clap = { version = "^3.2", features = ["derive", "env"] }
libc = "^0.2.126"
serde = { version = "^1.0.141", features = ["derive"] }
serde_json = "^1.0.83"
shellexpand = "^2.1.2"
rayon = "^1.5.3"
time = { version = "=0.2.27", features = ["serde", "std"] }
qrcode = { version = "^0.12.0", default-features = false }
compact_jwt = "^0.2.3"

zxcvbn = "^2.2.1"

dialoguer =  "^0.10.1"

# webauthn-authenticator-rs = { version = "0.4.2-beta.3", features = ["u2fhid"] }
webauthn-authenticator-rs = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "7a8e6c6b351ab7544f08cf8ba48424baacee1360", features = ["u2fhid"] }

tokio = { version = "^1.20.0", features = ["rt", "macros"] }

url = { version = "^2.2.2", features = ["serde"] }
uuid = "^1.1.2"

[build-dependencies]
clap = { version = "^3.2", features = ["derive"] }
clap_complete = { version = "^3.2.3"}
