[package]
name = "kanidm_unix_int"
version = "1.1.0-alpha.4"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2018"
license = "MPL-2.0"
description = "Kanidm Unix Integration Clients"
documentation = "https://docs.rs/kanidm/latest/kanidm/"
homepage = "https://github.com/kanidm/kanidm/"
repository = "https://github.com/kanidm/kanidm/"

[profile.release]
lto = "thin"

[lib]
name = "kanidm_unix_common"
path = "src/lib.rs"

[[bin]]
name = "kanidm_unixd"
path = "src/daemon.rs"

[[bin]]
name = "kanidm_unixd_tasks"
path = "src/tasks_daemon.rs"

[[bin]]
name = "kanidm_ssh_authorizedkeys"
path = "src/ssh_authorizedkeys.rs"

[[bin]]
name = "kanidm_cache_invalidate"
path = "src/cache_invalidate.rs"

[[bin]]
name = "kanidm_cache_clear"
path = "src/cache_clear.rs"

[[bin]]
name = "kanidm_unixd_status"
path =  "src/daemon_status.rs"

[[bin]]
name = "kanidm_test_auth"
path =  "src/test_auth.rs"

[dependencies]
kanidm_client = { path = "../kanidm_client", version = "1.1.0-alpha" }
kanidm_proto = { path = "../kanidm_proto", version = "1.1.0-alpha" }
kanidm = { path = "../kanidmd", version = "1.1.0-alpha" }
toml = "0.5"
rpassword = "5.0"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net", "io-util"] }
tokio-util = { version = "0.6", features = ["codec"] }

futures = "0.3"
bytes = "1.0"

libc = "0.2"
log = "0.4"
env_logger = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0.11"
structopt = { version = "0.3", default-features = false }

libsqlite3-sys = { version = "0.20" }
rusqlite = { version = "0.24", features = ["backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.17"

reqwest = { version = "0.11" }

users = "0.11"
async-std = "1.6"

lru = "0.6"

[features]
# default = [ "libsqlite3-sys/bundled" ]

[dev-dependencies]
kanidm = { path = "../kanidmd" }

[build-dependencies]
structopt = { version = "0.3", default-features = false }
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"

